# pyro-meets-sbi

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: cookie_chips_data.csv  cookie_posteriors.pkl
slides/: slides.html  slides.md
src/: 01_pyro_cookie_example.ipynb  02_pyro-sbi_cookie_example.ipynb  generate_data.py  utils.py
src/pyro_meets_sbi/: 01_pyro_cookie_example.ipynb  02_pyro-sbi_cookie_example.ipynb
